Fixed spacing

--- a/styles.css
+++ b/styles.css
@@ -173,8 +173,8 @@ button:hover {
 }
 
 #difficultyText {
-    margin:auto;
-    font-size: 1em;
+    margin: 15px auto;
+    font-size: 1.5em;
 }
 
 #title {
